--- a/src/app/loads/components/load-stop-card/components/trip-popover/trip-popover.component.html
+++ b/src/app/loads/components/load-stop-card/components/trip-popover/trip-popover.component.html
@@ -3,8 +3,8 @@
    <div>
     <span>{{trip.driverTeams[0].drivers[0].firstName}} {{trip.driverTeams[0].drivers[0].lastName}}</span>
     |
-    <span>Tk{{trip.truckEquipment.number}}</span>
+    <span>Tk{{trip.truck.number}}</span>
     |
-    <span>TI{{trip.trailerEquipment.number}}</span>
+    <span>TI{{trip.trailer.number}}</span>
    </div>
 </div>
