--- a/src/app/drivers/components/driver-card/driver-card.component.html
+++ b/src/app/drivers/components/driver-card/driver-card.component.html
@@ -6,12 +6,12 @@ class="driver-card-section"
     <div>
       <bd-initials-circle
         class="initials-circle"
-        [firstName]="driver.firstName"
-        [lastName]="driver.lastName">
+        [firstName]="driver.contact.firstName"
+        [lastName]="driver.contact.lastName">
       </bd-initials-circle>
     </div>
     <div class="driver-full-name">
-      <span>{{driver.firstName}} {{driver.lastName}}</span>
+      <span>{{driver.contact.firstName}} {{driver.contact.lastName}}</span>
     </div>
     <div class="driver-type">{{driverTypeText}}</div>
   </div>
