--- a/src/app/customers/components/customer-card/customer-card.component.scss
+++ b/src/app/customers/components/customer-card/customer-card.component.scss
@@ -1,4 +1,117 @@
 @import '../../../../assets/styles/variables';
+@import '../../../../assets/styles/mixins'; 
+
+.customer-card-section {
+  position: relative;
+  display: flex;
+  height: 100px;
+  padding: $default-margin;
+  background: inherit;
+  font-size: $tiny-font-size;
+  line-height: 18px;
+  cursor: pointer;
+  border-bottom: $border;
+  justify-content: space-between;
+
+  .left {
+    width: 30%;
+    height: 70px;
+
+    .cropped-customer-name {
+      display: flex;
+      width: 28px;
+      height: 28px;
+      background: $black;
+      color: $white;
+      font-size: $mini-font-size;
+      border-radius: 50%;
+      justify-content: center;
+      align-items: center;
+    }
+
+    .customer-name {
+      overflow: hidden;
+      text-overflow: ellipsis;
+      white-space: nowrap;
+      font-weight: bold;
+      padding-top: 7px;
+
+      span {
+        overflow: hidden;
+        font-weight: bold;
+        text-overflow: ellipsis;
+        white-space: nowrap;
+      }
+    }
+  }
+
+  .middle {
+    display: flex;
+    width: 30%;
+    height: 70px;
+    padding-left: 17px;
+    flex-direction: column;
+    justify-content: flex-end;
+
+    .customer-contact-full-name-container {
+      overflow: hidden;
+      font-weight: bold;
+    }
+
+    .position-container {
+      overflow: hidden;
+      text-overflow: ellipsis;
+      white-space: nowrap;
+    }
+
+    .customer-address-phone {
+      overflow: hidden;
+      text-overflow: ellipsis;
+      white-space: nowrap;
+    }
+  }
+
+  .right {
+    position: relative;
+    width: 40%;
+    flex-direction: column;
+    padding-left: $default-margin;
+    padding-top: 1px;
+
+    .load {
+      display: flex;
+
+      .load-circle {
+        width: 10px;
+        height: 10px;
+        background: $black;
+        margin-top: 3px;
+        border-radius: 50%;
+      }
+
+      .load-name {
+        margin-left: 5px;
+      }
+    }
+
+    .status-text {
+      position: absolute;
+      right: 22px;
+      bottom: -5px;
+    }
+
+    .status {
+      position: absolute;
+      right: 0;
+      width: 12px;
+      height: 12px;
+      background: $black;
+      color: $white;
+      bottom: -2px;
+      border-radius: $form-control-height;
+    }
+  }
+}
 
 :host {
   background: $white;
@@ -11,114 +124,6 @@
   &.active {
     .customer-card-section {
       border-bottom-color: $blue;
-    }
-  }
-}
-
-.customer-card-section {
-  position: relative;
-  height: 100px;
-  padding: $default-margin;
-  background: inherit;
-  font-size: $tiny-font-size;
-  cursor: pointer;
-  border-bottom: $border;
-  justify-content: space-between;
-
-  .bottom,
-  .top {
-    display: flex;
-    justify-content: space-between;
-
-    div {
-      flex: 1;
-    }
-  }
-
-  .top {
-    .left {
-      span {
-        display: flex;
-        width: 28px;
-        height: 28px;
-        background: $black;
-        color: $white;
-        font-size: $mini-font-size;
-        border-radius: 50%;
-        justify-content: center;
-        align-items: center;
-      }
-    }
-
-    .middle {
-      display: flex;
-      overflow: hidden;
-      align-items: flex-end;
-      font-weight: bold;
-      padding-left: $default-margin;
-    }
-
-    .right {
-      display: flex;
-      flex-direction: column;
-      align-items: flex-start;
-
-      .loads-container {
-        .load {
-          display: flex;
-
-          .load-circle {
-            width: 10px;
-            height: 10px;
-            margin: 3px 5px 0 5px;
-            background: $black;
-            border-radius: 50%;
-          }
-        }
-      }
-    }
-  }
-
-  .bottom {
-    .left {
-      overflow: hidden;
-
-      .customer-name {
-        overflow: hidden;
-        font-weight: bold;
-        text-overflow: ellipsis;
-        white-space: nowrap;
-      }
-    }
-
-    .middle {
-      overflow: hidden;
-      padding-left: $default-margin;
-
-      .position {
-        overflow: hidden;
-        text-overflow: ellipsis;
-        white-space: nowrap;
-      }
-    }
-
-    .right {
-      position: relative;
-      display: flex;
-      align-items: flex-end;
-      justify-content: flex-end;
-
-      .status-text {
-        margin-right: 5px;
-        bottom: 0;
-      }
-
-      .status {
-        width: 12px;
-        height: 12px;
-        margin-bottom: 3px;
-        border-radius: $form-control-height;
-      }
     }
   }
 }
