--- a/src/app/equipment/components/equipment-card/equipment-card.component.scss
+++ b/src/app/equipment/components/equipment-card/equipment-card.component.scss
@@ -18,7 +18,7 @@
 
     .equipment-make {
       overflow: hidden;
-      padding-top: 7px;
+      padding-top: 8px;
 
       span {
         overflow: hidden;
@@ -60,6 +60,7 @@
   .right {
     position: relative;
     width: 40%;
+    height: 70px;
     flex-direction: column;
     padding-left: $default-margin;
     padding-top: 1px;
@@ -86,7 +87,7 @@
     .status-text {
       position: absolute;
       right: 22px;
-      bottom: -5px;
+      bottom: -3px;
     }
 
     .status {
@@ -96,7 +97,7 @@
       height: 12px;
       background: $black;
       color: $white;
-      bottom: -2px;
+      bottom: 0;
       border-radius: $form-control-height;
     }
   }
