--- a/src/app/drivers/components/driver-card/driver-card.component.scss
+++ b/src/app/drivers/components/driver-card/driver-card.component.scss
@@ -60,6 +60,7 @@
   .right {
     position: relative;
     width: 40%;
+    height: 70px;
     line-height: 17px;
     flex-direction: column;
     padding-left: $default-margin;
@@ -86,7 +87,7 @@
     .status-text {
       position: absolute;
       right: 22px;
-      bottom: -5px;
+      bottom: -3px;
       justify-content: center;
     }
 
@@ -96,7 +97,7 @@
       width: 12px;
       height: 12px;
       background: $black;
-      bottom: -2px;
+      bottom: 0;
       border-radius: $form-control-height;
     }
   }
