--- a/src/app/shared/components/filter-container/components/autocomplete-filter/autocomplete-filter.component.html
+++ b/src/app/shared/components/filter-container/components/autocomplete-filter/autocomplete-filter.component.html
@@ -22,7 +22,7 @@
       Clear selected items
     </button>
   </div>
-  <div *ngIf="isSearchMode">
+  <div *ngIf="isSearchMode" class="search-container">
     <filter-item
       *ngFor="let item of loadedItems; let i = index;"
       [itemTemplate]="itemTemplate"
@@ -33,18 +33,20 @@
     </filter-item>
   </div>
   <div *ngIf="!isSearchMode">
-    <filter-item
-      *ngFor="let item of selectedItemsCache; let i = index;"
-      [checked]="isSelected(item)"
-      [itemTemplate]="itemTemplate"
-      (checkedChange)="onSelectedChange($event)"
-      (click)="onItemClick(item)"
-      [item]="item">
-    </filter-item>
+    <div class="selected-container">
+      <filter-item
+        *ngFor="let item of selectedItemsCache; let i = index;"
+        [checked]="isSelected(item)"
+        [itemTemplate]="itemTemplate"
+        (checkedChange)="onSelectedChange($event)"
+        (click)="onItemClick(item)"
+        [item]="item">
+      </filter-item>
+    </div>
     <div class="autocomplete-section-header" *ngIf="loadedItemsCache.length && selectedItemsCache.length">
       ALL VALUES
     </div>
-    <div *ngIf="loadedItemsCache.length">
+    <div *ngIf="loadedItemsCache.length" class="all-container">
       <filter-item
         *ngFor="let item of loadedItemsCache; let i = index;"
         [itemTemplate]="itemTemplate"
