--- a/src/app/loads/components/load-stop-card/load-stop-card.component.html
+++ b/src/app/loads/components/load-stop-card/load-stop-card.component.html
@@ -16,7 +16,7 @@
     </span>
     <span class="customer-load-number">{{load.customerLoadNumber}}</span>
   </div>
-  <div class="right" *ngIf="this.load.stops.length > 1">
+  <div class="right stops-container" *ngIf="this.load.stops.length > 1">
     <div class="distance-wrapper">
       <span class="firstStopAddress">{{firstStop.address.city}}, {{firstStop.address.state}}</span>
       <span class="lastStopAddress">{{lastStop.address.city}}, {{lastStop.address.state}}</span>
