--- a/src/app/customers/components/customer-card/customer-card.component.scss
+++ b/src/app/customers/components/customer-card/customer-card.component.scss
@@ -4,7 +4,7 @@
   position: relative;
   display: flex;
   height: 100px;
-  padding: $default-margin;
+  padding: 14px $default-margin;
   background: inherit;
   font-size: $tiny-font-size;
   line-height: 18px;
@@ -14,12 +14,12 @@
 
   .left {
     width: 30%;
-    height: 70px;
 
     .cropped-customer-name {
       display: flex;
       width: 28px;
       height: 28px;
+      margin: 4px 0;
       background: $black;
       color: $white;
       font-size: $mini-font-size;
@@ -33,7 +33,6 @@
       text-overflow: ellipsis;
       white-space: nowrap;
       font-weight: bold;
-      padding-top: 7px;
 
       span {
         overflow: hidden;
@@ -47,17 +46,18 @@
   .middle {
     display: flex;
     width: 30%;
-    height: 70px;
     padding-left: 17px;
     flex-direction: column;
-    justify-content: flex-end;
+    justify-content: flex-start;
 
-    .customer-contact-full-name-container {
+    .customer-contact-full-name {
+      display: block;
       overflow: hidden;
       font-weight: bold;
     }
 
-    .position-container {
+    .position {
+      display: block;
       overflow: hidden;
       text-overflow: ellipsis;
       white-space: nowrap;
@@ -73,10 +73,8 @@
   .right {
     position: relative;
     width: 40%;
-    height: 70px;
     flex-direction: column;
     padding-left: $default-margin;
-    padding-top: 1px;
 
     .load {
       display: flex;
@@ -85,11 +83,14 @@
         width: 10px;
         height: 10px;
         background: $black;
-        margin-top: 3px;
+        margin-top: 4px;
         border-radius: 50%;
       }
 
       .load-name {
+        overflow: hidden;
+        text-overflow: ellipsis;
+        white-space: nowrap;
         margin-left: 5px;
       }
     }
@@ -97,7 +98,7 @@
     .status-text {
       position: absolute;
       right: 22px;
-      bottom: -3px;
+      bottom: 0;
     }
 
     .status {
@@ -107,7 +108,7 @@
       height: 12px;
       background: $black;
       color: $white;
-      bottom: 0;
+      bottom: 3px;
       border-radius: $form-control-height;
     }
   }
