--- a/src/app/equipment/components/equipment-card/equipment-card.component.html
+++ b/src/app/equipment/components/equipment-card/equipment-card.component.html
@@ -9,17 +9,13 @@ class="equipment-card-section"
       [lastName]="lastLetter">
     </bd-initials-circle>
     <div class="equipment-make">
-      <span>{{equipment.make}}</span>
+      {{equipment.make}}
     </div>
     <div>{{equipment.number}}</div>
   </div>
   <div class="middle">
-    <div class="driver-name">
-    <span>{{equipment.driverFirstName}} {{equipment.driverLastName}}</span>
-  </div>
-  <div class="driver-type">
-    <span>{{driverType}}</span>
-  </div>
+    <span class="driver-name">{{equipment.driverFirstName}} {{equipment.driverLastName}}</span>
+    <span class="driver-type">{{driverType}}</span>
   <div class="changes">{{this.equipment.equipmentNotification?.date | date:'MM/dd'}}</div>
   </div>
   <div class="right">
