--- a/src/app/equipment/components/equipment-card/equipment-card.component.scss
+++ b/src/app/equipment/components/equipment-card/equipment-card.component.scss
@@ -5,7 +5,7 @@
   position: relative;
   display: flex;
   height: 100px;
-  padding: $default-margin;
+  padding: 14px $default-margin;
   background: inherit;
   font-size: $tiny-font-size;
   line-height: 18px;
@@ -18,14 +18,9 @@
 
     .equipment-make {
       overflow: hidden;
-      padding-top: 8px;
-
-      span {
-        overflow: hidden;
-        font-weight: bold;
-        text-overflow: ellipsis;
-        white-space: nowrap;
-      }
+      font-weight: bold;
+      text-overflow: ellipsis;
+      white-space: nowrap;
     }
   }
 
@@ -63,7 +58,6 @@
     height: 70px;
     flex-direction: column;
     padding-left: $default-margin;
-    padding-top: 1px;
 
     .tr-city {
       display: flex;
@@ -72,7 +66,7 @@
         width: 10px;
         height: 10px;
         background: $black;
-        margin-top: 3px;
+        margin-top: 4px;
         border-radius: 50%;
       }
 
@@ -87,7 +81,7 @@
     .status-text {
       position: absolute;
       right: 22px;
-      bottom: -3px;
+      bottom: 0;
     }
 
     .status {
@@ -97,7 +91,7 @@
       height: 12px;
       background: $black;
       color: $white;
-      bottom: 0;
+      bottom: 3px;
       border-radius: $form-control-height;
     }
   }
