--- a/src/app/shared/components/bd-icons/bd-initials-circle/bd-initials-circle.component.scss
+++ b/src/app/shared/components/bd-icons/bd-initials-circle/bd-initials-circle.component.scss
@@ -6,6 +6,7 @@ $circle-diameter: 28px;
   display: flex;
   width: $circle-diameter;
   height: $circle-diameter;
+  margin: 4px 0;
   background: $black;
   color: $white;
   font-size: $mini-font-size;
