FSPA-312 #comment code refactoring

--- a/src/app/forms/load-form/load-form.component.html
+++ b/src/app/forms/load-form/load-form.component.html
@@ -60,7 +60,7 @@
         clearLabel='Leave Empty'
         class="bd-form-control"
         labelText='Billing Address'
-        formControlName="billingAddressId"
+        formControlName="customerBillingAddressId"
         defaultTitleText="Select Billing Address"
         [dropdownItemTemplate]="addressDropdown"
         [items]="load.customer.addresses"
