--- a/src/app/loads/components/load-stop-card/load-stop-card.component.html
+++ b/src/app/loads/components/load-stop-card/load-stop-card.component.html
@@ -10,7 +10,7 @@
           [width]="popupWidth"
           [horizontalOffset]="-10"
           [closeOnClickOutside]="closeOnClickOutside">
-          <company-popover [company]="load.customer"[companyBillingAddress]="load.billingAddress" [companyAddress]="load.customerAddress"></company-popover>
+          <company-popover [company]="load.customer" [companyBillingAddress]="load.customerBillingAddress" [companyAddress]="load.customerAddress"></company-popover>
         </bd-popover-content>
       </span>
     </span>
@@ -34,30 +34,30 @@
     </div>
   </div>
   <div class="bottom">
-    <span class="link">{{currentTrips.driverTeams[0].drivers[0].contact.firstName}}</span>
+    <span class="link">{{currentTrip.driverTeams[0].drivers[0].contact.firstName}}</span>
     <span class="link">|</span>
     <span class="link" [bd-popover]="driverPopover" [popoverOnHover]="popoverOnHover">
-      Tk{{currentTrips.truck.number}}
+      Tk{{currentTrip.truck.number}}
       <bd-popover-content
         #driverPopover
         placement="auto"
         [width]="popupWidth"
         [horizontalOffset]="-10"
         [closeOnClickOutside]="closeOnClickOutside">
-        <driver-popover [driver]="currentTrips.driverTeams[0].drivers[0]"></driver-popover>
+        <driver-popover [driver]="currentTrip.driverTeams[0].drivers[0]"></driver-popover>
       </bd-popover-content>
       </span>
     <span class="link">|</span>
-    <span class="link">TI{{currentTrips.trailer.number}}</span>
+    <span class="link">TI{{currentTrip.trailer.number}}</span>
     <span class="current-trip">
       <span [bd-popover]="tripPopover" [popoverOnHover]="popoverOnHover">
-        TR{{currentTrips.number}}
+        TR{{currentTrip.number}}
         <bd-popover-content
           #tripPopover
           placement="auto"
           [width]="popupWidth"
           [closeOnClickOutside]="closeOnClickOutside">
-          <trip-popover [trip]="currentTrips"></trip-popover>
+          <trip-popover [trip]="currentTrip"></trip-popover>
         </bd-popover-content>
       </span>
     </span>
