--- a/src/app/shared/components/filter-container/components/autocomplete-filter/autocomplete-filter.component.html
+++ b/src/app/shared/components/filter-container/components/autocomplete-filter/autocomplete-filter.component.html
@@ -13,10 +13,9 @@
     </i>
   </bd-input>
   <div
-    class="autocomplete-section-header">
-    <span *ngIf="!selectedItems.length && !selectedItemsCache.length">ALL VALUES</span>
+    class="autocomplete-section-header selected-section-header" *ngIf="selectedItemsCache.length || selectedItems.length">
     <button
-      *ngIf="selectedItemsCache.length || selectedItems.length"
+      class="clear-selected-button"
       (click)="clearSelectedItems($event)"
       [disabled]="isClearButtonDisabled">
       Clear selected items
@@ -43,7 +42,7 @@
         [item]="item">
       </filter-item>
     </div>
-    <div class="autocomplete-section-header" *ngIf="loadedItemsCache.length && selectedItemsCache.length">
+    <div class="autocomplete-section-header all-section-header" *ngIf="loadedItemsCache.length">
       ALL VALUES
     </div>
     <div *ngIf="loadedItemsCache.length" class="all-container">
