--- a/src/app/customers/components/customer-card/customer-card.component.scss
+++ b/src/app/customers/components/customer-card/customer-card.component.scss
@@ -1,4 +1,5 @@
 @import '../../../../assets/styles/variables';
+@import '../../../../assets/styles/styles';
 
 .customer-card-section {
   position: relative;
@@ -10,7 +11,6 @@
   line-height: 18px;
   cursor: pointer;
   border-bottom: $border;
-  justify-content: space-between;
 
   .left {
     width: 30%;
@@ -29,17 +29,7 @@
     }
 
     .customer-name {
-      overflow: hidden;
-      text-overflow: ellipsis;
-      white-space: nowrap;
       font-weight: bold;
-
-      span {
-        overflow: hidden;
-        font-weight: bold;
-        text-overflow: ellipsis;
-        white-space: nowrap;
-      }
     }
   }
 
@@ -51,29 +41,14 @@
     justify-content: flex-start;
 
     .customer-contact-full-name {
-      display: block;
       overflow: hidden;
       font-weight: bold;
-    }
-
-    .position {
-      display: block;
-      overflow: hidden;
-      text-overflow: ellipsis;
-      white-space: nowrap;
-    }
-
-    .customer-address-phone {
-      overflow: hidden;
-      text-overflow: ellipsis;
-      white-space: nowrap;
     }
   }
 
   .right {
     position: relative;
     width: 40%;
-    flex-direction: column;
     padding-left: $default-margin;
 
     .load {
@@ -88,9 +63,6 @@
       }
 
       .load-name {
-        overflow: hidden;
-        text-overflow: ellipsis;
-        white-space: nowrap;
         margin-left: 5px;
       }
     }
