--- a/src/app/drivers/components/driver-card/driver-card.component.scss
+++ b/src/app/drivers/components/driver-card/driver-card.component.scss
@@ -1,4 +1,5 @@
 @import '../../../../assets/styles/variables';
+@import '../../../../assets/styles/styles';
 @import '../../../../assets/styles/mixins';
 
 .driver-card-section {
@@ -11,16 +12,12 @@
   line-height: 18px;
   cursor: pointer;
   border-bottom: $border;
-  justify-content: space-between;
 
   .left {
     width: 30%;
 
     .driver-full-name {
-      overflow: hidden;
       font-weight: bold;
-      text-overflow: ellipsis;
-      white-space: nowrap;
     }
 
     .driver-type {
@@ -35,17 +32,8 @@
     flex-direction: column;
     justify-content: flex-start;
 
-    .driver-phone {
-      overflow: hidden;
-      text-overflow: ellipsis;
-      white-space: nowrap;
-    }
-
     .send-message {
-      overflow: hidden;
       color: $blue;
-      text-overflow: ellipsis;
-      white-space: nowrap;
       font-weight: bold;
     }
   }
@@ -54,7 +42,6 @@
     position: relative;
     width: 40%;
     line-height: 17px;
-    flex-direction: column;
     padding-left: $default-margin;
 
     .tr-city {
@@ -100,16 +87,6 @@
   &.active,
   &:hover {
     background: $light-blue;
-
-    .right {
-      .tr-city {
-        .tr-city-name {
-          @include multi-line-ellipsis($line-height: 18px, $line-count: 2);
-          width: 80%;
-          text-align: left;
-        }
-      }
-    }
   }
 
   &.active {
