--- a/src/app/equipment/components/equipment-card/equipment-card.component.html
+++ b/src/app/equipment/components/equipment-card/equipment-card.component.html
@@ -8,15 +8,15 @@ class="equipment-card-section"
       [firstName]="firstLetter"
       [lastName]="lastLetter">
     </bd-initials-circle>
-    <div class="equipment-make">
+    <div class="equipment-make ellipsis">
       {{equipment.make}}
     </div>
     <div>{{equipment.number}}</div>
   </div>
   <div class="middle">
     <span class="driver-name">{{equipment.driverFirstName}} {{equipment.driverLastName}}</span>
-    <span class="driver-type">{{driverType}}</span>
-  <div class="changes">{{this.equipment.equipmentNotification?.date | date:'MM/dd'}}</div>
+    <span class="driver-type ellipsis">{{driverType}}</span>
+  <div class="changes ellipsis">{{this.equipment.equipmentNotification?.date | date:'MM/dd'}}</div>
   </div>
   <div class="right">
       <div class="tr-city">
