--- a/src/app/equipment/components/equipment-card/equipment-card.component.scss
+++ b/src/app/equipment/components/equipment-card/equipment-card.component.scss
@@ -1,4 +1,5 @@
 @import '../../../../assets/styles/variables';
+@import '../../../../assets/styles/styles';
 @import '../../../../assets/styles/mixins';
 
 .equipment-card-section {
@@ -11,16 +12,12 @@
   line-height: 18px;
   cursor: pointer;
   border-bottom: $border;
-  justify-content: space-between;
 
   .left {
     width: 30%;
 
     .equipment-make {
-      overflow: hidden;
       font-weight: bold;
-      text-overflow: ellipsis;
-      white-space: nowrap;
     }
   }
 
@@ -37,24 +34,11 @@
       align-items: flex-end;
       font-weight: bold;
     }
-
-    .driver-type {
-      overflow: hidden;
-      text-overflow: ellipsis;
-      white-space: nowrap;
-    }
-
-    .changes {
-      overflow: hidden;
-      text-overflow: ellipsis;
-      white-space: nowrap;
-    }
   }
 
   .right {
     position: relative;
     width: 40%;
-    flex-direction: column;
     padding-left: $default-margin;
 
     .tr-city {
@@ -101,16 +85,6 @@
   &.active,
   &:hover {
     background: $light-blue;
-
-    .right {
-      .tr-city {
-        .tr-city-name {
-          @include multi-line-ellipsis($line-height: 18px, $line-count: 2);
-          width: 80%;
-          text-align: left;
-        }
-      }
-    }
   }
 
   &.active {
