FSPA-312 code refactoring

--- a/src/app/drivers/components/driver-card/driver-card.component.html
+++ b/src/app/drivers/components/driver-card/driver-card.component.html
@@ -15,6 +15,7 @@ class="driver-card-section"
       {{driver.contact.firstName}} {{driver.contact.lastName}}
     </div>
     <div class="driver-type">{{driverTypeText}}</div>
+  </div>
   <div class="middle">
     <span class="driver-phone ellipsis">{{driver.phone}}</span>
     <span class="send-message ellipsis">Send Message</span>
