FSPA-336 add tests to check filter item selection

--- a/src/app/shared/components/filter-container/components/autocomplete-filter/autocomplete-filter.component.html
+++ b/src/app/shared/components/filter-container/components/autocomplete-filter/autocomplete-filter.component.html
@@ -23,7 +23,7 @@
     </filter-item>
   </div>
   <div *ngIf="!isSearchMode">
-    <div class="autocomplete-section-header selected-section-header" *ngIf="selectedItemsCache.length || selectedItems.length">
+    <div class="autocomplete-section-header selected-section-header" *ngIf="selectedItemsCache.length">
       <button
         class="clear-selected-button"
         (click)="clearSelectedItems($event)"
