fixed validator messages

--- a/src/assets/styles/variables.scss
+++ b/src/assets/styles/variables.scss
@@ -62,6 +62,7 @@ $mini-font-size: .625rem;
 $tiny-font-size: .75rem;
 $small-font-size: .875rem;
 $large-font-size: 1.25rem;
+$extra-large-font-size: 2rem;
 $top-panel-icon-size: 19px;
 
 @font-face {
