--- a/src/app/auth/components/login/login.component.scss
+++ b/src/app/auth/components/login/login.component.scss
@@ -9,7 +9,7 @@
 
   h3 {
     color: $blue;
-    font-size: 1.2rem;
+    font-size: $large-font-size;
     font-weight: 600;
   }
 }
@@ -26,7 +26,7 @@
       position: relative;
       top: 5px;
       margin: 0 5px;
-      font-size: 2rem;
+      font-size: $extra-large-font-size;
       content: '\00b7';
     }
 
