--- a/src/app/auth/forms/register-form/register-form.component.html
+++ b/src/app/auth/forms/register-form/register-form.component.html
@@ -49,7 +49,7 @@
   </bd-validator>
   <fieldset formGroupName="passwordGroup">
     <bd-validator [component]="registerForm.controls.passwordGroup.controls.password"
-      [errorDefs]="{required: 'Passwords do not match.'}">
+      [errorDefs]="{required: 'This field is required'}">
       <bd-input
         class="bd-form-control"
         [type]="'password'"
@@ -69,7 +69,7 @@
     </bd-validator>
     <bd-validator [component]="registerForm.controls.passwordGroup"
       *ngIf="registerForm.controls.passwordGroup.controls.password.touched && registerForm.controls.passwordGroup.controls.retryPassword.touched"
-      [errorDefs]="{passwordsNotMatch: 'Passwords do not match.'}">
+      [errorDefs]="{passwordsNotMatch: 'Passwords do not match'}">
     </bd-validator>
   </fieldset>
   <div class="divider"></div>
