FSPA-332 #comment code refactoring

--- a/src/app/companies/components/company-card/company-card.component.html
+++ b/src/app/companies/components/company-card/company-card.component.html
@@ -1,8 +1,6 @@
 <div
 class="company-card-section"
-(click)="onClick()"
-(mouseover)="onEnter()"
-(mouseleave)="onLeave()">
+(click)="onClick()">
   <div class="left">
     <span class="cropped-company-name">{{this.croppedCompanyName}}</span>
     <div class="company-name ellipsis">
