FSPA-291 fix: scrolled down doesn't work correct

--- a/src/app/shared/components/bd-infinite-scroll/bd-infinite-scroll.component.html
+++ b/src/app/shared/components/bd-infinite-scroll/bd-infinite-scroll.component.html
@@ -2,7 +2,8 @@
   class="bd-infinite-scroll"
   infinite-scroll 
   [debounce]="true" 
-  [infiniteScrollDistance]="1.1" 
+  [infiniteScrollDistance]="1" 
+  [infiniteScrollThrottle]="0" 
   [scrollWindow]="false"
   (scrolledUp)="onScrolledUp($event)"
   (scrolled)="onScrolledDown($event)">
