--- a/src/app/shared/components/bd-perfect-scrollbar/bd-perfect-scrollbar.component.scss
+++ b/src/app/shared/components/bd-perfect-scrollbar/bd-perfect-scrollbar.component.scss
@@ -14,6 +14,10 @@ bd-perfect-scrollbar {
     white-space: nowrap;
   }
 
+  .ps-content {
+    min-height: 0 !important;
+  }
+
   .ps-active-x {
     &.ps-in-scrolling {
       .ps-scrollbar-x-rail {
