FSPA-343 added new part of tests

--- a/src/app/drivers/drivers.html
+++ b/src/app/drivers/drivers.html
@@ -10,6 +10,10 @@
         <span class="prefix" bd-prefix>$&nbsp;</span>
         <span bd-suffix>$&nbsp;</span>
     </bd-input>
+    <bd-textarea
+      class="bd-form-control"
+    [labelText]="'Special Requirements'">
+    </bd-textarea>
   </second-pane>
   <third-pane>
     <router-outlet></router-outlet>
