FSPA-332 lint err

--- a/src/app/companies/components/company-card/company-card.component.html
+++ b/src/app/companies/components/company-card/company-card.component.html
@@ -1,6 +1,6 @@
 <div
 class="company-card-section"
-(mouseover)="onEnter()"
+(mouseenter)="onEnter()"
 (mouseleave)="onLeave()"
 (click)="onClick()">
   <div class="left">
