FSPA-358 separate main and auth modules

--- a/src/app/auth/components/auth-wrapper/auth-wrapper.component.html
+++ b/src/app/auth/components/auth-wrapper/auth-wrapper.component.html
@@ -1,4 +1,4 @@
 <div class="auth-wrapper">
   <img class="auth-logo" src="assets/img/auth-logo.png">
-  <ng-content></ng-content>
+    <router-outlet></router-outlet>
 </div>
