--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -14,56 +14,7 @@ body {
 
 app {
   display: flex;
-}
-
-/*page layout start*/
-navigation-bar {
-  position: relative;
-  z-index: $navbar-z-index;
-  display: inline-block;
-  width: 160px;
-  height: 100vh;
-  transition: all .5s;
-  padding-right: 20px;
-
-  &.slide {
-    z-index: 2;
-    height: 100vh;
-    margin-left: -140px;
-
-    &:hover {
-      margin-left: 0;
-    }
-  }
-}
-
-top-panel {
-  display: flex;
-  width: 100%;
-  height: $form-control-height;
-  background: $white;
-  align-items: center;
-  border-bottom: $border;
-}
-
-.main-content {
-  height: calc(100% - #{$form-control-height});
-}
-
-main {
-  z-index: $main-z-index;
   width: 100%;
   height: 100vh;
-  margin-left: -20px;
-
-  &.auth-content {
-    margin-left: 0;
-  }
+  justify-content: center;
 }
-
-bd-toast-manager {
-  position: absolute;
-  width: 350px;
-  bottom: 0;
-}
-/*page layout end*/
