added login and part of register api

--- a/src/app/auth/forms/login-form/login-form.component.html
+++ b/src/app/auth/forms/login-form/login-form.component.html
@@ -6,16 +6,17 @@
       Please check that you have entered your Login and Password correctly.
     </div>
   </div>
-  <bd-validator [component]="loginForm.controls.login" [errorDefs]="{required: 'This field is required'}">
+  <bd-validator [component]="loginForm.controls.username" [errorDefs]="{required: 'This field is required'}">
     <bd-input
       class="bd-form-control"
       [labelText]="'Phone or Email'"
-      formControlName="login">
+      formControlName="username">
     </bd-input>
   </bd-validator>
   <bd-validator [component]="loginForm.controls.password" [errorDefs]="{required: 'This field is required'}">
     <bd-input
       class="bd-form-control"
+      [type]="'password'"
       [labelText]="'Password'"
       formControlName="password">
     </bd-input>
@@ -28,4 +29,5 @@
     [(disabled)]="!loginForm.valid"
     [text]="'Login'">
   </bd-button>
+  <bd-spinner *ngIf="isLoading"></bd-spinner>
 </form>
