--- a/src/app/auth/forms/register-form/register-form.component.scss
+++ b/src/app/auth/forms/register-form/register-form.component.scss
@@ -21,4 +21,12 @@
       display: none;
     }
   }
+
+  bd-spinner {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    margin-top: -40px;
+    margin-left: -20px;
+  }
 }
