FSPA-358 add auth to path for auth module

--- a/src/app/auth/components/register/register.component.html
+++ b/src/app/auth/components/register/register.component.html
@@ -3,6 +3,6 @@
   <bd-register-form [viewMode]="formViewMode"></bd-register-form>
   <div class="links-wrapper text-center">
     Already registered?
-    <a [routerLink]="['/login']">Login</a>
+    <a [routerLink]="['/auth/login']">Login</a>
   </div>
 </div>
