add feature to label : display only 2 strings of text

--- a/src/app/shared/components/bd-dropdown/bd-dropdown.component.scss
+++ b/src/app/shared/components/bd-dropdown/bd-dropdown.component.scss
@@ -23,7 +23,10 @@
       margin-right: 32px;
 
       label {
+        overflow: hidden;
         font-size: 10px;
+        line-height: 1em;
+        max-height: 2em;
         font-weight: 300;
         margin-bottom: 0;
         text-transform: uppercase;
