--- a/src/assets/styles/variables.scss
+++ b/src/assets/styles/variables.scss
@@ -58,7 +58,7 @@ $default-border-radius: 3px;
 $base-font-size: 16px;
 
 $default-font-size: 1rem;
-$mini-font-size: .625rem;
+$mini-font-size: .625rem; // 10px
 $tiny-font-size: .75rem;
 $small-font-size: .875rem;
 $large-font-size: 1.25rem;
