--- a/src/app/shared/components/bd-form-section/bd-form-section.component.scss
+++ b/src/app/shared/components/bd-form-section/bd-form-section.component.scss
@@ -5,8 +5,8 @@
   padding-top: 20px;
 
   .bd-section-title {
-    margin: 10px 17px 20px;
-    font-size: $small-font-size;
+    margin: 25px 17px 15px;
+    font-size: $tiny-font-size;
     text-transform: uppercase;
     font-weight: bold;
     letter-spacing: 2px;
