--- a/src/app/shared/components/bd-icons/icon-with-count-indicator/icon-with-count-indicator.component.scss
+++ b/src/app/shared/components/bd-icons/icon-with-count-indicator/icon-with-count-indicator.component.scss
@@ -6,7 +6,7 @@ span {
   display: flex;
   overflow: hidden;
   width: 57px;
-  height: $form-control-height;
+  height: $default-height;
   cursor: pointer;
   justify-content: center;
   align-items: center;
