--- a/src/assets/styles/variables.scss
+++ b/src/assets/styles/variables.scss
@@ -70,8 +70,10 @@ $top-panel-icon-size: 19px;
   src: ('../assets/fonts/sf-regular.woff');
 }
 /* default input height */
-$form-control-height: 50px;
+$form-control-height: 39px;
 $horizontal-scroll-container-height: 43px;
+/* default input height */
+$default-height: 50px;
 
 /* form navigation */
 $form-navigation-height: 91px;
