--- a/src/app/main/main.component.scss
+++ b/src/app/main/main.component.scss
@@ -29,14 +29,14 @@ navigation-bar {
 top-panel {
   display: flex;
   width: 100%;
-  height: $form-control-height;
+  height: $default-height;
   background: $white;
   align-items: center;
   border-bottom: $border;
 }
 
 .main-content {
-  height: calc(100% - #{$form-control-height});
+  height: calc(100% - #{$default-height});
 }
 
 main {
