--- a/src/app/shared/components/bd-buttons/bd-button/bd-button.component.scss
+++ b/src/app/shared/components/bd-buttons/bd-button/bd-button.component.scss
@@ -2,7 +2,7 @@
 
 .common {
   width: 100%;
-  height: 50px;
+  height: $form-control-height;
   border: 0;
   border-bottom: $border;
   border-radius: $default-border-radius;
