--- a/src/app/shared/components/form-navigation/form-navigation.component.scss
+++ b/src/app/shared/components/form-navigation/form-navigation.component.scss
@@ -16,7 +16,7 @@ form-navigation {
     background-color: $white;
 
     .title {
-      font-size: $large-font-size;
+      font-size: 16px;
       font-weight: bold;
     }
 
